Add log in form

--- a/index.ejs
+++ b/index.ejs
@@ -7,6 +7,18 @@
     <title>Practice</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Please log in</h1>
+    <form action="/log-in" method="POST">
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username" placeholder="username" />
+      <label for="password">Password</label>
+      <input
+        type="password"
+        name="password"
+        id="password"
+        placeholder="password"
+      />
+      <button type="submit">Log In</button>
+    </form>
   </body>
 </html>
