Display msg if user logged in

--- a/index.ejs
+++ b/index.ejs
@@ -7,6 +7,10 @@
     <title>Practice</title>
   </head>
   <body>
+    <% if (user) { %>
+    <h1>WELCOME BACK <%= user.username %></h1>
+    <a href="/log-out">LOG OUT</a>
+    <% } else { %>
     <h1>Please log in</h1>
     <form action="/log-in" method="POST">
       <label for="username">Username</label>
@@ -20,5 +24,6 @@
       />
       <button type="submit">Log In</button>
     </form>
+    <% } %>
   </body>
 </html>
