--- a/index.ejs
+++ b/index.ejs
@@ -7,8 +7,8 @@
     <title>Practice</title>
   </head>
   <body>
-    <% if (user) { %>
-    <h1>WELCOME BACK <%= user.username %></h1>
+    <% if (currentUser) { %>
+    <h1>WELCOME BACK <%= currentUser.username %></h1>
     <a href="/log-out">LOG OUT</a>
     <% } else { %>
     <h1>Please log in</h1>
