Use bcrypt.compare to verify password

--- a/index.ejs
+++ b/index.ejs
@@ -24,6 +24,7 @@
       />
       <button type="submit">Log In</button>
     </form>
+    <a href="/sign-up">SIGN UP</a>
     <% } %>
   </body>
 </html>
